--- a/Firmware v1.0 - Beta - Copia/Config.ini
+++ b/Firmware v1.0 - Beta - Copia/Config.ini
@@ -1,2 +1,3 @@
 [REGISTROS]
-address=H:\Eletronica\Projetos\Project_Client\Projetos_Ednei\Software Bolão\Visual Basic\Firmware v1.0 - Beta
+addressBD=H:\Eletronica\Projetos\Project_Client\Projetos_Ednei\Software Bolão\Visual Basic\Firmware v1.0 - Beta
+addressBKP=H:\Eletronica\Projetos\Project_Client\Projetos_Ednei\Software Bolão\Visual Basic\Firmware v1.0 - Beta
